SERVER-32161 MongoDB 3.2+ fails to compile on PPC64LE with glibc 2.26+

(cherry picked from commit 2f788aa745ca1366704b821087225af49ce3285a)